# welearn-datastack

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  secrets-entrypoint.sh
.github/workflows/: ci.yml  lint-and-test.yml
alembic/: env.py
alembic/versions/: 16ff997426d3_remove_error_retrieval_unique_constraint.py  5d82613c9aca_context_document.py  821173cf9c5d_initial_migration.py  89920abb7ff8_add_category.py  c63f929c5bc8_add_new_state_document_externally_.py  e354666f951d_inferred_user.py
k8s/welearn-datastack/: Chart.yaml  local.test.yaml  secrets.dev.yaml  secrets.prod.yaml  secrets.staging.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
k8s/welearn-datastack/templates/: azure-secrets.yaml  service-account.yaml
locustfiles/: locustfile.py
script/: update-materialized-view
sql/: 89920abb7ff8_populate_corpus_category.sql  qty_document_in_qdrant
tests/: database_test_utils.py  test_computed_metadata.py  test_query_utils.py  test_regular_expressions.py  test_retrieve_data_from_database.py  test_scraping_utils.py  test_url_checker.py  test_xml_extractor.py
tests/classification_harmonizer/: test_classification_harmonizer.py
tests/document_classifier/: test_document_classifier.py  test_sdgs_classifiers.py
tests/document_collector_hub/: test_pdf_extractor.py  test_utils.py
tests/document_collector_hub/collector_selector/: test_collector_selector.py
tests/document_collector_hub/plugins_test/: test_api_ted.py  test_csv_conversation.py  test_csv_france_culture.py  test_csv_ted.py  test_csv_wikipedia.py  test_fao_open_knowledge.py  test_hal.py  test_hal_unittest.py  test_irl_le_mag.py  test_json_hal.py  test_notre_environnement.py  test_oapen.py  test_oe_books.py  test_open_alex.py  test_pressbooks.py  test_rest_wikipedia.py  test_scraping_conversation.py  test_scraping_peerj.py  test_scraping_plos.py  test_unccelearn.py  test_unesdoc.py  test_utils.py  test_uved.py  test_world_bank_okr.py  test_xml_plos.py
tests/document_collector_hub/resources/: Le second métier des femmes pauvres _ faire fonctionner l’économie et l’Etat social _ IRD le Mag'.html  classified_urls.json  error_urls.json  oapen_api.json  oe_book_chapter.html  oe_mets_test.xml  open_alex_response.json  open_alex_response_several_works.json  open_alex_response_several_works_1.json  open_alex_response_several_works_2.json  pb_chapter_5_metadata.json  pb_chapters.json  resource_uved.json  scwld.json  scwld_pt.json  test_table.html  unccelearn_course.html  urls.json
tests/document_collector_hub/test_nodes/: test_extract_n_collect_docs.py
tests/document_vectorizer/: test_document_vectorizer.py  test_embedding_model_helpers.py
tests/keywords_extractor/: test_keywords_extractor.py
tests/plugins/rest_requesters/: test_oapen_unittest.py
tests/qdrant_syncronizer/: test_qdrant_handler.py  test_qdrant_syncronizer.py
tests/resources/input/: batch_urls.csv  oe_mets_test.xml
tests/source_models/: test_fao_open_knownledge.py  test_world_bank_okr.py
tests/source_models/resources/: world_bank_okr_example.xml
tests/url_collector/: test_atom_collector.py  test_csv_collector.py  test_feed_helpers.py  test_hal_collector.py  test_json_collector.py  test_oe_books_collector.py  test_openalex_collector.py  test_press_books_collector.py  test_rss_collector.py  test_sitemap_collector.py  test_ted_collector.py  test_uncclearn_collector.py  test_unesdoc_collector.py  test_utils.py  test_uved_collector.py  test_wikipedia_collector.py
tests/url_collector/resources/: atom_file.xml  atom_file_doi.xml  hal_file.json  oe_book_file_toc.html  oe_books_rss.xml  oe_mets_test.xml  open-alex.json  open-alex2.json  pb_algolia_response.json  pb_toc1.json  pb_toc2.json  rss_file.rss  ted_file.json  uved_file.json
tests/url_sanitary_crawler/: test_url_sanitary_crawler.py
tests/wikipedia_updater/: test_wikipedia_updater.py
welearn_datastack/: constants.py  exceptions.py  local_types.py  regular_expression.py
welearn_datastack/collectors/: atom_collector.py  csv_collector.py  fao_open_knowledge_collector.py  hal_collector.py  json_collector.py  oe_books_collector.py  open_alex_collector.py  press_books_collector.py  rss_collector.py  sitemap_collector.py  ted_collector.py  unccelearn_collector.py  unesdoc_collector.py  uved_collector.py  wikipedia_collector.py  world_bank_okr.py  zenodo_collector.py
welearn_datastack/collectors/helpers/: feed_helpers.py  json_helpers.py
welearn_datastack/data/: batch_generator.py  db_models.py  db_wrapper.py  enumerations.py  pdf_body_info.py  pdf_document.py  scraped_welearn_document.py  url_collector.py  wikipedia_container.py  xml_data.py
welearn_datastack/data/details_dataclass/: author.py  scholar_fields.py  scholar_institution_type.py  scholar_level.py  topics.py
welearn_datastack/data/generic_converter/: zenodo_rest_response_converter.py
welearn_datastack/data/source_models/: fao_open_knowledge.py  hal.py  oapen.py  open_alex.py  pressbooks.py  ted.py  unesdoc.py  uved.py  world_bank_okr.py  zenodo.py
welearn_datastack/modules/: collector_selector.py  computed_metadata.py  embedding_model_helpers.py  keywords_extractor.py  modules_utils.py  pdf_extractor.py  qdrant_handler.py  query_utils.py  retrieve_data_from_database.py  retrieve_data_from_files.py  scraping_utils.py  sdgs_classifiers.py  tika_client.py  url_checker.py  url_utils.py  validation.py  wikipedia_updater.py  xml_extractor.py
welearn_datastack/nodes_workflow/BackFiller/: backfilling.py  generate_to_backfill_batch.py
welearn_datastack/nodes_workflow/ClassficationHarmonizer/: classification_harmonizer.py
welearn_datastack/nodes_workflow/DocumentClassifier/: document_classifier.py  generate_to_classify_batch.py
welearn_datastack/nodes_workflow/DocumentHubCollector/: document_collector.py  (+1 more)
welearn_datastack/plugins/: interface.py
welearn_datastack/utils_/: database_utils.py  http_client_utils.py  nlp_utils.py  path_utils.py  scraping_utils.py  text_stat_utils.py  virtual_environement_utils.py
(+123 files in other folders)
